src/test/deca/context/invalid/personalTests/TypeIncompatible3.deca
// Erreur de compilation

{
   boolean b = "Hello" == 5;
}